updated to a more professional CLI an an executable package
